# MetaWiper

./: .gitignore  CMakeLists.txt  README.md
cmake/: CPackConfig.cmake
core/: CMakeLists.txt
core/include/: meta_wipe_core_export.h  meta_wiper_core.h
core/include/base/: file_handler.h  file_properties.h  processor_factory.h
core/include/processors/: docx_processor.h  jpeg_processor.h  pdf_processor.h
core/src/: meta_wiper_core.cpp
core/src/base/: file_handler.cpp  file_properties.cpp  processor_factory.cpp
core/src/processors/: docx_processor.cpp  jpeg_processor.cpp  pdf_processor.cpp
gui/: CMakeLists.txt
gui/include/: application.h  version.h.in
gui/include/viewmodels/: filelistmodel.h  mainviewmodel.h  metadatamodel.h
gui/resources/: resources.qrc
gui/resources/qml/: main.qml
gui/resources/qml/components/: AboutDialog.qml  ActionPanel.qml  FileList.qml  MetadataView.qml  OverwriteDialog.qml  SettingsDialog.qml
gui/resources/qml/pages/: MainPage.qml  SettingsPage.qml
gui/resources/qml/theme/: Colors.qml  Theme.qml  Typography.qml
gui/src/: application.cpp  application.h  main.cpp
gui/src/viewmodels/: filelistmodel.cpp  mainviewmodel.cpp  metadatamodel.cpp
tests/: CMakeLists.txt  main.cpp
tests/common/: CMakeLists.txt  test_utils.cpp  test_utils.h
tests/formats/jpeg/: CMakeLists.txt  jpeg_test.cpp
tests/formats/pdf/: CMakeLists.txt  pdf_test.cpp
tests/src/: main.cpp
